{
    "name": "GolfGameInputActions",
    "maps": [
        {
            "name": "Mobile",
            "id": "b9debb16-846c-4c38-8dd9-cb63d1ad62be",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "faee5784-b8d6-4d11-b37a-92b8ccff9541",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "1c171d36-5ae0-4282-a4a0-61627ce405b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPos",
                    "type": "Value",
                    "id": "9f61f4db-c011-4226-8e5d-b98933f8f5d5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Drag",
                    "type": "Value",
                    "id": "f816e642-931c-44c0-9177-d6f7be91dd78",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "db8e9fce-00f5-46e0-a440-d75ec9163a24",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79529dc8-e3b4-4235-9c26-6b8df50d6ced",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d65bc64f-06db-42a6-a126-0d58a29fe60c",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9eb3cd84-826f-4ad3-8163-d37da01341dc",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "f405bde4-e838-45ed-9fd6-399dd9a2443e",
            "actions": [
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "b2b25e90-33b3-4ca1-9d0a-896111c51f6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "98e20221-7d9c-4db6-aa4b-f6f3efb9858b",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}